--- a/irish-rail/Stations/List/Base.lproj/StationsView.storyboard
+++ b/irish-rail/Stations/List/Base.lproj/StationsView.storyboard
@@ -24,16 +24,21 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="doZ-JV-SdM">
                                 <rect key="frame" x="0.0" y="119" width="414" height="743"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="z9f-C6-fXm">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="51"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="StationCell" textLabel="yts-wz-8U1" style="IBUITableViewCellStyleDefault" id="5Ft-hs-r7f">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="StationCell" textLabel="yts-wz-8U1" style="IBUITableViewCellStyleDefault" id="5Ft-hs-r7f">
+                                        <rect key="frame" x="0.0" y="95.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5Ft-hs-r7f" id="hyV-YE-lPv">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="385.5" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="yts-wz-8U1">
-                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                                    <rect key="frame" x="20" y="0.0" width="357.5" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
                                                     <nil key="textColor"/>
@@ -61,6 +66,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Yy4-fj-bzK" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="5Gj-2a-eWw"/>
+                            <constraint firstItem="doZ-JV-SdM" firstAttribute="top" secondItem="Yy4-fj-bzK" secondAttribute="bottom" id="HFK-Mr-jSL"/>
                             <constraint firstItem="YOp-so-rVG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NMY-dq-ie4"/>
                             <constraint firstItem="YOp-so-rVG" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Xu8-KT-GC4"/>
                             <constraint firstItem="Yy4-fj-bzK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="cTm-Ep-qnn"/>
@@ -68,11 +74,11 @@
                             <constraint firstItem="doZ-JV-SdM" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="jpD-iI-0zh"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="doZ-JV-SdM" secondAttribute="bottom" id="m4M-lX-xSN"/>
                             <constraint firstItem="Yy4-fj-bzK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="vIw-Pr-P2e"/>
-                            <constraint firstItem="doZ-JV-SdM" firstAttribute="top" secondItem="Yy4-fj-bzK" secondAttribute="bottom" id="zrg-h7-lTu"/>
                         </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="searchBar" destination="z9f-C6-fXm" id="xnk-EM-cVa"/>
                         <outlet property="stationTypeSegmentControl" destination="Yy4-fj-bzK" id="Dvx-qZ-p8a"/>
                         <outlet property="tableView" destination="doZ-JV-SdM" id="zmg-4u-Xh3"/>
                     </connections>
