--- a/irish-rail/Stations/Details/StationDetails.storyboard
+++ b/irish-rail/Stations/Details/StationDetails.storyboard
@@ -16,17 +16,78 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="13I-nA-JHL">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                            <mapView multipleTouchEnabled="YES" contentMode="scaleAspectFit" verticalHuggingPriority="252" mapType="standard" showsUserLocation="YES" showsPointsOfInterest="NO" showsScale="YES" translatesAutoresizingMaskIntoConstraints="NO" id="13I-nA-JHL">
+                                <rect key="frame" x="0.0" y="88" width="414" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="240" id="aBg-ka-0jh"/>
+                                </constraints>
                             </mapView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Station Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ns3-Ps-oM8">
+                                <rect key="frame" x="16" y="344" width="382" height="29"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cpW-oe-X2Y" userLabel="Name Label Action">
+                                <rect key="frame" x="16" y="344" width="382" height="29"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain"/>
+                                <connections>
+                                    <action selector="didTapStationName:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="yHR-9a-O1q"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0j5-lx-uGe" userLabel="Separator View">
+                                <rect key="frame" x="0.0" y="389" width="414" height="1"/>
+                                <color key="backgroundColor" systemColor="separatorColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="Gbo-iR-V8X"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="muO-lR-rpc">
+                                <rect key="frame" x="0.0" y="390" width="414" height="506"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="StationDataCell" textLabel="KrF-H2-H9P" style="IBUITableViewCellStyleDefault" id="6nK-xy-aeE">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6nK-xy-aeE" id="a7p-dT-cJ9">
+                                            <rect key="frame" x="0.0" y="0.0" width="385.5" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="KrF-H2-H9P">
+                                                    <rect key="frame" x="20" y="0.0" width="357.5" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="13I-nA-JHL" secondAttribute="bottom" id="8CE-sX-BFO"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="13I-nA-JHL" secondAttribute="trailing" id="VuW-iv-bgB"/>
-                            <constraint firstItem="13I-nA-JHL" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="XXv-wK-4R1"/>
-                            <constraint firstItem="13I-nA-JHL" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="YTL-Re-XHP"/>
+                            <constraint firstItem="Ns3-Ps-oM8" firstAttribute="top" secondItem="13I-nA-JHL" secondAttribute="bottom" constant="16" id="0Sz-9x-Pu1"/>
+                            <constraint firstItem="cpW-oe-X2Y" firstAttribute="leading" secondItem="Ns3-Ps-oM8" secondAttribute="leading" id="6TT-gj-u4V"/>
+                            <constraint firstItem="0j5-lx-uGe" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="9Zq-LP-OkK"/>
+                            <constraint firstItem="cpW-oe-X2Y" firstAttribute="top" secondItem="Ns3-Ps-oM8" secondAttribute="top" id="Mlj-Nr-vDJ"/>
+                            <constraint firstItem="Ns3-Ps-oM8" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" priority="999" id="PHh-3k-bbh"/>
+                            <constraint firstItem="Ns3-Ps-oM8" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="W9N-h6-mck"/>
+                            <constraint firstItem="muO-lR-rpc" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="WBW-tA-pTc"/>
+                            <constraint firstAttribute="bottom" secondItem="muO-lR-rpc" secondAttribute="bottom" id="Xhz-T7-7hF"/>
+                            <constraint firstItem="13I-nA-JHL" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Y8w-PS-vE3"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0j5-lx-uGe" secondAttribute="trailing" id="Zpq-1o-NB3"/>
+                            <constraint firstItem="cpW-oe-X2Y" firstAttribute="trailing" secondItem="Ns3-Ps-oM8" secondAttribute="trailing" id="ZtX-HC-lrW"/>
+                            <constraint firstItem="0j5-lx-uGe" firstAttribute="top" secondItem="Ns3-Ps-oM8" secondAttribute="bottom" constant="16" id="gGG-VC-BOG"/>
+                            <constraint firstItem="13I-nA-JHL" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="h7n-Ny-JeP"/>
+                            <constraint firstItem="cpW-oe-X2Y" firstAttribute="bottom" secondItem="Ns3-Ps-oM8" secondAttribute="bottom" id="rt0-ei-oOg"/>
+                            <constraint firstItem="13I-nA-JHL" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="rvK-6I-jkp"/>
+                            <constraint firstItem="muO-lR-rpc" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="ywz-Cj-RA6"/>
+                            <constraint firstItem="muO-lR-rpc" firstAttribute="top" secondItem="0j5-lx-uGe" secondAttribute="bottom" id="yxF-D9-WRH"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Ns3-Ps-oM8" secondAttribute="trailing" constant="16" id="zJo-0c-t4b"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="qRz-3P-Ldp">
@@ -39,6 +100,8 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="mapView" destination="13I-nA-JHL" id="gKZ-cS-WJ7"/>
+                        <outlet property="nameLabel" destination="Ns3-Ps-oM8" id="3kX-jW-AR3"/>
+                        <outlet property="tableView" destination="muO-lR-rpc" id="pAN-PW-Vxc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -48,6 +111,9 @@
     </scenes>
     <resources>
         <image name="star" catalog="system" width="128" height="116"/>
+        <systemColor name="separatorColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.28999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
