--- a/irish-rail/Stations/Data/StationDataView.storyboard
+++ b/irish-rail/Stations/Data/StationDataView.storyboard
@@ -44,13 +44,17 @@
                                     <constraint firstAttribute="height" constant="1" id="Gbo-iR-V8X"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No trains due in the next 90 minutes" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GeD-Zj-sjv">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No trains due in the next 90 minutes" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GeD-Zj-sjv">
                                 <rect key="frame" x="64" y="330" width="286" height="566"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="muO-lR-rpc">
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Mb6-sg-Oz3">
+                                <rect key="frame" x="197" y="603" width="20" height="20"/>
+                                <color key="color" name="AccentColor"/>
+                            </activityIndicatorView>
+                            <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="muO-lR-rpc">
                                 <rect key="frame" x="0.0" y="330" width="414" height="566"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
@@ -79,7 +83,9 @@
                         <constraints>
                             <constraint firstItem="Ns3-Ps-oM8" firstAttribute="top" secondItem="13I-nA-JHL" secondAttribute="bottom" constant="16" id="0Sz-9x-Pu1"/>
                             <constraint firstItem="cpW-oe-X2Y" firstAttribute="leading" secondItem="Ns3-Ps-oM8" secondAttribute="leading" id="6TT-gj-u4V"/>
+                            <constraint firstItem="Mb6-sg-Oz3" firstAttribute="centerY" secondItem="muO-lR-rpc" secondAttribute="centerY" id="7OO-a1-A1F"/>
                             <constraint firstItem="0j5-lx-uGe" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="9Zq-LP-OkK"/>
+                            <constraint firstItem="Mb6-sg-Oz3" firstAttribute="centerX" secondItem="muO-lR-rpc" secondAttribute="centerX" id="FHW-J2-hZZ"/>
                             <constraint firstItem="cpW-oe-X2Y" firstAttribute="top" secondItem="Ns3-Ps-oM8" secondAttribute="top" id="Mlj-Nr-vDJ"/>
                             <constraint firstItem="Ns3-Ps-oM8" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" priority="999" id="PHh-3k-bbh"/>
                             <constraint firstItem="Ns3-Ps-oM8" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="W9N-h6-mck"/>
@@ -110,7 +116,9 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="Mb6-sg-Oz3" id="pTc-GM-diR"/>
                         <outlet property="favoriteButton" destination="Xep-eW-lsH" id="Oup-hu-3YB"/>
+                        <outlet property="informationLabel" destination="GeD-Zj-sjv" id="Dva-rn-boT"/>
                         <outlet property="mapView" destination="13I-nA-JHL" id="gKZ-cS-WJ7"/>
                         <outlet property="nameLabel" destination="Ns3-Ps-oM8" id="3kX-jW-AR3"/>
                         <outlet property="tableView" destination="muO-lR-rpc" id="pAN-PW-Vxc"/>
